switched board en 2d et fixed bug because me so cool
I bench 2 plates for reps