@@ -1,11 +1,12 @@
 package modele.plan_de_jeu;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Board {
 
     public final int WIDTH = 13;
-    private Tile[] tiles;
+    private Tile[][] tiles;
 
     private TileState maxPlayer;
     private TileState minPlayer;
@@ -19,15 +20,12 @@ public class Board {
     }
 
     public void initializeNewBoard(String[] boardValues) {
-        tiles = new Tile[WIDTH*WIDTH];
-        int x = 0, y = 0;
-        for (int i = 0; i < boardValues.length; i++) {
-            //time to change this shti wtf
-            tiles[i] = new Tile(new Position(x, y), Integer.parseInt(boardValues[i]));
-            x++;
-            if (x == WIDTH) {
-                x = 0;
-                y++;
+        tiles = new Tile[WIDTH][WIDTH];
+        int x = 0, y = 0, z = 0;
+        for (int j = 0; j < WIDTH; j++) {
+            for(int i = 0 ; i < WIDTH; i++){
+                tiles[i][j] = new Tile(new Position(i, j), Integer.parseInt(boardValues[z]));
+                z++;
             }
         }
     }
@@ -38,15 +36,19 @@ public class Board {
         // optimisation, envoyer la position a place de la tile
         Map<Tile, List<Position>> positions = new HashMap<>();
 
-        ArrayList<Tile> maxPlayerPieces;
+        List<Tile> maxPlayerPieces;
 
         if(this.maxPlayer == TileState.NOIR){
-            // optimisation: a place de recreer la map a chaque fois, juste updater map qui existe deja
-            maxPlayerPieces = new ArrayList<>(Arrays.stream(tiles).filter(tile -> tile.getState() == TileState.NOIR ||
-                    tile.getState() == TileState.ROI_NOIR).toList());
+            maxPlayerPieces = Arrays.stream(tiles)
+                    .flatMap(Arrays::stream)
+                    .filter(tile -> tile.getState() == TileState.NOIR || tile.getState() == TileState.ROI_NOIR)
+                    .collect(Collectors.toList());
 
         } else {
-            maxPlayerPieces = new ArrayList<>(Arrays.stream(tiles).filter(tile -> tile.getState() == TileState.ROUGE).toList());
+            maxPlayerPieces = Arrays.stream(tiles)
+                    .flatMap(Arrays::stream)
+                    .filter(tile -> tile.getState() == TileState.ROUGE)
+                    .collect(Collectors.toList());
         }
 
         skimThroughBoard(positions, maxPlayerPieces);
@@ -60,29 +62,31 @@ public class Board {
             List<Position> availablePositions = new ArrayList<>();
 
             //aller vers la droite
-            for(int i = tile.getPosition().getX() + 1; i < this.WIDTH && tiles[i + tile.getPosition().getY()].getState() == TileState.EMPTY; i++){
-                availablePositions.add(new Position(i, tile.getPosition().getY()));
+            for(int i = tile.getX() + 1; i < WIDTH && !isBlockedTile(tiles[i][tile.getY()]); i++){
+                availablePositions.add(new Position(i, tile.getY()));
             }
 
-            // aller vers la gauche
-            for(int i = tile.getPosition().getX() - 1; i >= 0 && tiles[i + tile.getPosition().getY()].getState() == TileState.EMPTY; i--){
-                availablePositions.add(new Position(i, tile.getPosition().getY()));
+            //aller vers la gauche
+            for(int i = tile.getX() - 1; i >= 0 && !isBlockedTile(tiles[i][tile.getY()]); i--){
+                availablePositions.add(new Position(i, tile.getY()));
             }
 
-            // vers le haut
-            for(int j = tile.getPosition().getY() + 1; j < this.WIDTH && tiles[j + tile.getPosition().getX()].getState() == TileState.EMPTY; j++){
-                System.out.println(tiles[j + tile.getPosition().getX()].getState() + " " + tiles[j + tile.getPosition().getX()].getPosition());
-
-                availablePositions.add(new Position(tile.getPosition().getX(), j));
-
+            //aller vers le haut
+            for(int j = tile.getY() + 1; j < WIDTH && !isBlockedTile(tiles[tile.getX()][j]); j++){
+                availablePositions.add(new Position(tile.getX(), j));
             }
 
-            // vers le bas
-            for(int j = tile.getPosition().getY() - 1; j >= 0 && tiles[j + tile.getPosition().getX()].getState() == TileState.EMPTY; j--){
-                availablePositions.add(new Position(tile.getPosition().getX(), j));
+            // aller vers le bas
+            for(int j = tile.getY() - 1; j >= 0 && !isBlockedTile(tiles[tile.getX()][j]); j--){
+                availablePositions.add(new Position(tile.getX(), j));
             }
 
             positions.put(tile, availablePositions);
         }
+    }
+
+    private boolean isBlockedTile(Tile tile){
+        //if the tile has a piece on it OR has an X marked on it
+        return tile.getState() != TileState.EMPTY || tile.isMarkedX();
     }
 }
